# ai-berkshire

./: .gitignore  CLAUDE.md  Makefile  README.md  SKILL.md  pyproject.toml
.claude-plugin/: plugin.json
.github/workflows/: ci.yml
data/: com.ai-berkshire.watchlist.plist
references/: audit-protocol.md  masters-profiles.md  report-conventions.md  report-visuals.md  routing-guide.md  tool-conventions.md  verification-template.md
skills/: registry.json
skills/bottleneck-hunter/: SKILL.md
skills/bottleneck-hunter/references/: hourly-scan-mode.md  supply-chain-framework.md
skills/deep-company-series/: SKILL.md
skills/dyp-ask/: SKILL.md
skills/earnings-review/: SKILL.md
skills/earnings-team/: SKILL.md
skills/earnings-team/references/: agent-briefs.md
skills/exit-review/: SKILL.md
skills/financial-data/: SKILL.md
skills/industry-funnel/: SKILL.md
skills/industry-research/: SKILL.md
skills/investment-checklist/: SKILL.md
skills/investment-research/: SKILL.md
skills/investment-team/: SKILL.md
skills/management-deep-dive/: SKILL.md
skills/masters-portfolio/: SKILL.md
skills/morning-brief/: SKILL.md
skills/news-pulse/: SKILL.md
skills/news-pulse/references/: scout-briefs.md
skills/portfolio-review/: SKILL.md
skills/private-company-research/: SKILL.md
skills/quality-screen/: SKILL.md
skills/red-team/: SKILL.md
skills/self-review/: SKILL.md
skills/thesis-drift/: SKILL.md
skills/thesis-tracker/: SKILL.md
skills/track-record/: SKILL.md
skills/watchlist-monitor/: SKILL.md
skills/wechat-article/: SKILL.md
tests/: test_cache.py  test_contracts.py  test_core.py  test_tools_smoke.py
tools/: __init__.py  ashare_data.py  chart_gen.py  company_facts.py  decision_log.py  doctor.py  filings_fetch.py  filings_parse.py  financial_rigor.py  insider_trading.py  log-command.sh  masters_portfolio.py  morningstar_fair_value.py  portfolio_calc.py  quality_screen.py  report_audit.py  report_export.py  skill_registry.py  utils.py  watchlist.py  xueqiu_scraper.py
tools/core/: __init__.py  analysis.py  cache.py  config.py  exceptions.py  formatting.py  market.py  metrics.py  valuation.py
tools/experimental/: README.md  momentum_backtest.py  momentum_backtest_v2.py  stock_screener.py  xueqiu_scraper.py
(+7 files in other folders)
